fixed spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -62,7 +62,7 @@ body {
     height: 10%;
     /* border-bottom: 6px solid #A33B39; */
     padding: 2vh 4vw;
-    margin-bottom: -1vh;
+    margin-bottom: -3vh;
 }
 
 .big-circle {
@@ -185,7 +185,7 @@ body {
     width: 100%;
     height: 5vh;
     position: relative;
-    overflow: hidden;
+    /* overflow: hidden; */
 }
 
 .header-svg {
